--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Our EarthXHack Project",
   "main": "src/index.js",
   "scripts": {
-      "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/lamoreauxaj/Smart2O/issues"
   },
-  "homepage": "https://github.com/lamoreauxaj/Smart2O#readme"
+  "homepage": "https://github.com/lamoreauxaj/Smart2O#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.18.11"
+  }
 }
