--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/lamoreauxaj/Smart2O#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "npm": "^6.9.0"
   }
 }
